# minishell

./: .gitignore  123  2  3  CMakeLists.txt  Makefile  README.md  check.c  content))[0])  delimeters.c  delimiters_1.c  delimiters_2.c  env.c  example.c  file_ls  filename  flags.c  free.c  ft_cd.c  ft_echo.c  ft_env.c  ft_export.c  ft_pwd.c  ft_unset.c  main.c  minishell  minishell.h  parser.c  parser.h  parser_utils.c  test  test.c  utils.c
includes/: arr_buf.h  minishell.h  parser.h  redirect.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h  libftprintf.h
libft/objects/: check_params.d  convert_wch_to_ch.d  flags.d  ft_abs.d  ft_atof.d  ft_calloc.d  ft_isalnum.d  ft_isblank.d  ft_iscntrl.d  ft_isgraph.d  ft_islower.d  ft_isspace.d  ft_isupper.d  ft_isxdigit.d  ft_itoa.d  ft_lltoa.d  ft_lstadd_back.d  ft_lstadd_front.d  ft_lstclear.d  ft_lstdelone.d  ft_lstiter.d  ft_lstlast.d  ft_lstmap.d  ft_lstnew.d  ft_lstsize.d  ft_memdel.d  ft_pow.d  ft_printf.d  ft_putchar.d  ft_putendl.d  ft_putendl_fd.d  ft_putnbr.d  ft_putnbr_fd.d  ft_putstr.d  ft_putstr_fd.d  ft_putunbr.d  ft_split.d  ft_strcasecmp.d  ft_strcasestr.d  ft_strcat.d  (+43 more)
libft/sources/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+3 more)
libft/sources_bonus/: ft_abs.c  ft_atof.c  ft_isblank.c  ft_iscntrl.c  ft_isgraph.c  ft_islower.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_lltoa.c  ft_memdel.c  ft_pow.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putstr.c  ft_putunbr.c  ft_strcasecmp.c  ft_strcasestr.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlowcase.c  ft_strmap.c  ft_strncasecmp.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strstr.c  ft_strupcase.c  get_next_line.c  get_next_line_utils.c
libft/sources_printf/: check_params.c  convert_wch_to_ch.c  flags.c  ft_printf.c  get_params.c  print_c.c  print_f_e_g.c  print_i.c  print_inf_nan.c  print_lc_ls.c  print_o.c  print_p_x.c  print_s.c  print_u.c  print_utils_double.c  print_utils_e.c  print_utils_g.c  print_utils_num.c  util_number.c
objects/: arr_buf.d  check.d  delimiters_1.d  delimiters_2.d  env.d  execve.d  fd.d  flags_parser.d  free.d  ft_cd.d  ft_echo.d  ft_env.d  ft_exit.d  ft_export.d  ft_lstreverse.d  ft_pwd.d  ft_unset.d  minishell.d  parser.d  parser_del_spaces.d  parser_utils.d  redirect.d  signal.d  utils.d  utils_2.d  utils_3.d  utils_4.d  variables.d  variables_2.d
srcs/: arr_buf.c  check.c  close_open.c  delimiters_1.c  delimiters_2.c  execve.c  fd.c  flags_parser.c  free.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_lstreverse.c  ft_pwd.c  ft_unset.c  main.c  minishell.c  parser.c  parser_del_spaces.c  parser_utils.c  read_write.c  redirect.c  signal.c  utils copy.c  utils.c  utils_2.c  utils_3.c  utils_4.c  variables.c  variables_2.c
test.dSYM/Contents/Resources/DWARF/: test
