cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(minishell
        includes/arr_buf.h
        includes/minishell.h
        includes/parser.h
        includes/redirect.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_calloc.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd_back.c
        libft/sources/ft_lstadd_front.c
        libft/sources/ft_lstclear.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstlast.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_lstsize.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_split.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlcpy.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_substr.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources_bonus/ft_abs.c
        libft/sources_bonus/ft_atof.c
        libft/sources_bonus/ft_isblank.c
        libft/sources_bonus/ft_iscntrl.c
        libft/sources_bonus/ft_isgraph.c
        libft/sources_bonus/ft_islower.c
        libft/sources_bonus/ft_isspace.c
        libft/sources_bonus/ft_isupper.c
        libft/sources_bonus/ft_isxdigit.c
        libft/sources_bonus/ft_lltoa.c
        libft/sources_bonus/ft_memdel.c
        libft/sources_bonus/ft_pow.c
        libft/sources_bonus/ft_putchar.c
        libft/sources_bonus/ft_putendl.c
        libft/sources_bonus/ft_putnbr.c
        libft/sources_bonus/ft_putstr.c
        libft/sources_bonus/ft_putunbr.c
        libft/sources_bonus/ft_strcasecmp.c
        libft/sources_bonus/ft_strcasestr.c
        libft/sources_bonus/ft_strcat.c
        libft/sources_bonus/ft_strclr.c
        libft/sources_bonus/ft_strcmp.c
        libft/sources_bonus/ft_strcpy.c
        libft/sources_bonus/ft_strdel.c
        libft/sources_bonus/ft_strequ.c
        libft/sources_bonus/ft_striter.c
        libft/sources_bonus/ft_striteri.c
        libft/sources_bonus/ft_strlowcase.c
        libft/sources_bonus/ft_strmap.c
        libft/sources_bonus/ft_strncasecmp.c
        libft/sources_bonus/ft_strncat.c
        libft/sources_bonus/ft_strncpy.c
        libft/sources_bonus/ft_strnequ.c
        libft/sources_bonus/ft_strnew.c
        libft/sources_bonus/ft_strstr.c
        libft/sources_bonus/ft_strupcase.c
        libft/sources_bonus/get_next_line.c
        libft/sources_bonus/get_next_line_utils.c
        libft/sources_printf/check_params.c
        libft/sources_printf/convert_wch_to_ch.c
        libft/sources_printf/flags.c
        libft/sources_printf/ft_printf.c
        libft/sources_printf/get_params.c
        libft/sources_printf/print_c.c
        libft/sources_printf/print_f_e_g.c
        libft/sources_printf/print_i.c
        libft/sources_printf/print_inf_nan.c
        libft/sources_printf/print_lc_ls.c
        libft/sources_printf/print_o.c
        libft/sources_printf/print_p_x.c
        libft/sources_printf/print_s.c
        libft/sources_printf/print_u.c
        libft/sources_printf/print_utils_double.c
        libft/sources_printf/print_utils_e.c
        libft/sources_printf/print_utils_g.c
        libft/sources_printf/print_utils_num.c
        libft/sources_printf/util_number.c
        srcs/arr_buf.c
        srcs/check.c
        srcs/delimiters_1.c
        srcs/delimiters_2.c
        srcs/execve.c
        srcs/fd.c
        srcs/flags_parser.c
        srcs/free.c
        srcs/ft_cd.c
        srcs/ft_echo.c
        srcs/ft_env.c
        srcs/ft_exit.c
        srcs/ft_export.c
        srcs/ft_lstreverse.c
        srcs/ft_pwd.c
        srcs/ft_unset.c
        srcs/main.c
        srcs/minishell.c
        srcs/parser.c
        srcs/parser_del_spaces.c
        srcs/parser_utils.c
        srcs/redirect.c
        srcs/signal.c
        srcs/utils.c
        srcs/utils_2.c
        srcs/variables.c
        srcs/variables_2.c)
